--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/svelte": "7.0.5",
     "@astrojs/tailwind": "^6.0.0",
+    "@astrojs/vercel": "^8.1.1",
     "@fontsource-variable/jetbrains-mono": "^5.1.1",
     "@fontsource/roboto": "^5.1.0",
     "@iconify-json/fa6-brands": "^1.2.3",
